fixed bug on mobile for staked form

--- a/awh_build/home/static/home/styles/generic.css
+++ b/awh_build/home/static/home/styles/generic.css
@@ -22,6 +22,10 @@
     --snow: #FFF9FB;
 }
 
+body {
+    background-color: var(--snow);
+}
+
 #nav_logo_img {
     height: 50px;
 }
