--- a/awh_build/home/static/home/styles/home.css
+++ b/awh_build/home/static/home/styles/home.css
@@ -47,6 +47,13 @@
     min-height: 38px;
 }
 
+@media only screen and (max-width: 768px) {
+    /*account for the form getting stacked*/
+    #descript_field {
+        max-height: 156px;
+    }
+}
+
 .contact-form {
     padding-bottom: 10px;
 }
